# x86-64-simd

./: CMakeLists.txt  clear.sh
128-bit/: add.S  add.c  addctr.c  addmany.S  addu.S
FPU/: float1.c  movss.S
disass/: add128.os
header/: add_128bit.h  attr.h
src/: 128_32_add.c  128_32_sum.c
test/: add32_128.c  fp.c  fp.s  sum.c
tmp/: a.cpp
